@@ -6,6 +6,7 @@ xx.11.2008   1.00 RC-1
 - Added: developers, testers, translators, etc for About page
 - Added: option to have linked terms if imGlossary is installed
 - Added: option for selecting source of autoscr.shot (Thumbshot.org or Mozshot)
+- Added: option to set amount of category columns on Index Page
 - Added: captcha to submit form
 - Added: RSS feed using icmsfeed.php
 - Added: GPL2 license incl. unofficial translations
